--- a/prova/src/app/menu/menu.html
+++ b/prova/src/app/menu/menu.html
@@ -1,9 +1,9 @@
 <header class="d-flex justify-content-center py-3">
     <ul class="nav nav-pills">
-        <li class="nav-item"><a routerLink="calculadora-media" routerLinkActive="active" class="nav-link">Home</a></li>
-        <li class="nav-item"><a routerLink="apolice" routerLinkActive="active" class="nav-link">Clientes</a>
+        <li class="nav-item"><a routerLink="calculadora-media" routerLinkActive="active" class="nav-link">Calculadora de Média</a></li>
+        <li class="nav-item"><a routerLink="apolice" routerLinkActive="active" class="nav-link">Apólice de Automovel</a>
         </li>
-        <li class="nav-item"><a routerLink="calculadora-imc" routerLinkActive="active" class="nav-link">Calculadora</a></li>
-        <li class="nav-item"><a routerLink="conversor-temperatura" routerLinkActive="active" class="nav-link">Tela Pai</a></li>
+        <li class="nav-item"><a routerLink="calculadora-imc" routerLinkActive="active" class="nav-link">Calculadora de IMC</a></li>
+        <li class="nav-item"><a routerLink="conversor-temperatura" routerLinkActive="active" class="nav-link">Conversor de Temperatura</a></li>
     </ul>
 </header>
